# ca-bench

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
configs/: compress_msg_config.py  config.example.yaml  config.py  llm_config.py  models_config.py
data/: model_desc.jsonl
provider/: __init__.py  base_llm.py  constants.py  llm_provider_registry.py  openai_api.py
scripts/: calculator.py  download_data.py  evaluate.py  evaluator.py  model_inference.py
server/: api_router.py  models_server.py  schema_base.py  settings.py
server/conf/: app.conf  nginx.conf
server/custom_pipeline/: tabular_pipeline.py
templates/: pipeline_template.py  workflow_template.py  zeroshot_prompt.py
utils/: common.py  constants.py  cost_manager.py  exceptions.py  logs.py  token_counter.py  yaml_model.py
